// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text demo examples Snapshots: alignment 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: right;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: center;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: justify;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    align="end"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="end"
      appearance="p"
      element="p"
    >
      <glamorous(p)
        align="end"
        appearance="p"
        element="p"
      >
        <p
          className="css-0"
        >
          Align End
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    align="center"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="center"
      appearance="p"
      element="p"
    >
      <glamorous(p)
        align="center"
        appearance="p"
        element="p"
      >
        <p
          className="css-1"
        >
          Align Center
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    align="justify"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="justify"
      appearance="p"
      element="p"
    >
      <glamorous(p)
        align="justify"
        appearance="p"
        element="p"
      >
        <p
          className="css-2"
        >
          Align Justify: justified text should stretch the width of the container for each separate line. This example contains words of many lengths to display that lines are justified correctly. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis luctus nunc, in posuere odio viverra et. Quisque aliquam tincidunt ante ac mollis. Vestibulum et massa eget velit ultricies feugiat non non augue. Nulla nisl augue, ullamcorper ac dui.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: appearance 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 22px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 11px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="h3"
    element="h1"
  >
    <TextProvider
      appearance="h3"
      element="h1"
    >
      <glamorous(h1)
        appearance="h3"
        element="h1"
      >
        <h1
          className="css-0"
        >
          Heading 1 which looks like a Heading 3
        </h1>
      </glamorous(h1)>
    </TextProvider>
  </Text>
  <Text
    appearance="prose"
    element="p"
  >
    <TextProvider
      appearance="prose"
      element="p"
    >
      <glamorous(p)
        appearance="prose"
        element="p"
      >
        <p
          className="css-1"
        >
          Prose (Long Form) Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie eros at nisl rhoncus, et condimentum dui elementum. Praesent gravida metus at scelerisque ultrices.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="mouse"
    element="p"
  >
    <TextProvider
      appearance="mouse"
      element="p"
    >
      <glamorous(p)
        appearance="mouse"
        element="p"
      >
        <p
          className="css-2"
        >
          Mousetype Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie eros at nisl rhoncus, et condimentum dui elementum. Praesent gravida metus at scelerisque ultrices. Suspendisse at facilisis massa. Integer eleifend eleifend nibh posuere interdum.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: basic 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  fill: currentcolor;
  font-size: 16px;
  height: 1.25em;
  width: 1.25em;
}

<Text
  appearance="p"
  element="p"
>
  <TextProvider
    appearance="p"
    element="p"
  >
    <glamorous(p)
      appearance="p"
      element="p"
    >
      <p
        className="css-0"
      >
        Lorem ipsum 
        <IconCloud
          size="large"
        >
          <Icon
            rtl={false}
            size="large"
          >
            <glamorous(svg)
              aria-hidden={true}
              role="img"
              rtl={false}
              size="large"
              viewBox="0 0 24 24"
            >
              <svg
                aria-hidden={true}
                className="css-1"
                role="img"
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                  />
                </g>
              </svg>
            </glamorous(svg)>
          </Icon>
        </IconCloud>
         dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo, in suscipit orci. Donec enim augue, vehicula vel enim a, vestibulum tempus nunc.
      </p>
    </glamorous(p)>
  </TextProvider>
</Text>
`;

exports[`Text demo examples Snapshots: color 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #2a854e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #d6246e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  background-color: #421429;
  padding: 0.5em;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  color: #bfe7d4;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  margin-top: 0;
}

.css-3 *,
[data-css-3] *,
.css-3 *::before,
[data-css-3] *::before,
.css-3 *::after,
[data-css-3] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    color="#2a854e"
    element="p"
  >
    <TextProvider
      appearance="p"
      color="#2a854e"
      element="p"
    >
      <glamorous(p)
        appearance="p"
        color="#2a854e"
        element="p"
      >
        <p
          className="css-0"
        >
          Success Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    color="#d6246e"
    element="p"
  >
    <TextProvider
      appearance="p"
      color="#d6246e"
      element="p"
    >
      <glamorous(p)
        appearance="p"
        color="#d6246e"
        element="p"
      >
        <p
          className="css-1"
        >
          Magenta Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <glamorous(div)
    backgroundColor="#421429"
  >
    <div
      className="css-2"
    >
      <Text
        appearance="p"
        color="#bfe7d4"
        element="p"
        noMargins={true}
      >
        <TextProvider
          appearance="p"
          color="#bfe7d4"
          element="p"
          noMargins={true}
        >
          <glamorous(p)
            appearance="p"
            color="#bfe7d4"
            element="p"
            noMargins={true}
          >
            <p
              className="css-3"
            >
              Custom Text
            </p>
          </glamorous(p)>
        </TextProvider>
      </Text>
    </div>
  </glamorous(div)>
</div>
`;

exports[`Text demo examples Snapshots: font-weight 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-3 *,
[data-css-3] *,
.css-3 *::before,
[data-css-3] *::before,
.css-3 *::after,
[data-css-3] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="p"
    fontWeight="semiBold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="semiBold"
    >
      <glamorous(p)
        appearance="p"
        element="p"
        fontWeight="semiBold"
      >
        <p
          className="css-0"
        >
          Semi-bold Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight="bold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="bold"
    >
      <glamorous(p)
        appearance="p"
        element="p"
        fontWeight="bold"
      >
        <p
          className="css-1"
        >
          Bold Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight="extraBold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="extraBold"
    >
      <glamorous(p)
        appearance="p"
        element="p"
        fontWeight="extraBold"
      >
        <p
          className="css-2"
        >
          Extra-bold Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight={300}
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight={300}
    >
      <glamorous(p)
        appearance="p"
        element="p"
        fontWeight={300}
      >
        <p
          className="css-3"
        >
          Light Text
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: headings 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 34px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 28px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 22px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 18px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-3 *,
[data-css-3] *,
.css-3 *::before,
[data-css-3] *::before,
.css-3 *::after,
[data-css-3] *::after {
  box-sizing: inherit;
}

.css-4,
[data-css-4] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-4 *,
[data-css-4] *,
.css-4 *::before,
[data-css-4] *::before,
.css-4 *::after,
[data-css-4] *::after {
  box-sizing: inherit;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 400;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="h1"
  >
    <TextProvider
      appearance="p"
      element="h1"
    >
      <glamorous(h1)
        appearance="p"
        element="h1"
      >
        <h1
          className="css-0"
        >
          Heading 1
        </h1>
      </glamorous(h1)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h2"
  >
    <TextProvider
      appearance="p"
      element="h2"
    >
      <glamorous(h2)
        appearance="p"
        element="h2"
      >
        <h2
          className="css-1"
        >
          Heading 2
        </h2>
      </glamorous(h2)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h3"
  >
    <TextProvider
      appearance="p"
      element="h3"
    >
      <glamorous(h3)
        appearance="p"
        element="h3"
      >
        <h3
          className="css-2"
        >
          Heading 3
        </h3>
      </glamorous(h3)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h4"
  >
    <TextProvider
      appearance="p"
      element="h4"
    >
      <glamorous(h4)
        appearance="p"
        element="h4"
      >
        <h4
          className="css-3"
        >
          Heading 4
        </h4>
      </glamorous(h4)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h5"
  >
    <TextProvider
      appearance="p"
      element="h5"
    >
      <glamorous(h5)
        appearance="p"
        element="h5"
      >
        <h5
          className="css-4"
        >
          Heading 5
        </h5>
      </glamorous(h5)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h6"
  >
    <TextProvider
      appearance="p"
      element="h6"
    >
      <glamorous(h6)
        appearance="p"
        element="h6"
      >
        <h6
          className="css-5"
        >
          Heading 6
        </h6>
      </glamorous(h6)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: margin 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 34px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 0;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

<Text
  appearance="p"
  element="h1"
  noMargins={true}
>
  <TextProvider
    appearance="p"
    element="h1"
    noMargins={true}
  >
    <glamorous(h1)
      appearance="p"
      element="h1"
      noMargins={true}
    >
      <h1
        className="css-0"
      >
        Heading 1
      </h1>
    </glamorous(h1)>
  </TextProvider>
</Text>
`;

exports[`Text demo examples Snapshots: nested 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-0 > *,
[data-css-0] > * {
  margin-bottom: 1em;
}

.css-1,
[data-css-1] {
  background-color: #e8f4fa;
  color: #064d70;
  font-family: serif;
  font-size: 1.25rem;
  padding: 0.5em;
}

.css-2,
[data-css-2] {
  background-color: #dcdcfc;
  padding: 0.5em;
}

.css-3,
[data-css-3] {
  margin-bottom: 0;
  margin-top: 0;
  background-color: #dcdcfc;
  padding: 0.5em;
}

.css-4,
[data-css-4] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #dcdcfc;
  padding: 0.5em;
}

.css-4 *,
[data-css-4] *,
.css-4 *::before,
[data-css-4] *::before,
.css-4 *::after,
[data-css-4] *::after {
  box-sizing: inherit;
}

<Component>
  <glamorous(div)>
    <div
      className="css-0"
    >
      For non-nested Text components, you can opt 
      <em>
        in
      </em>
       to style inheritance by passing true to the inherit prop. 
      <glamorous(div)>
        <div
          className="css-1"
        >
          This is a non-nested div with custom styles. 
          <glamorous(glamorous(Text))
            inherit={true}
          >
            <Text
              appearance="p"
              className="css-2"
              element="p"
              inherit={true}
              noMargins={true}
            >
              <TextProvider
                appearance="p"
                className="css-2"
                element="p"
                inherit={true}
                noMargins={true}
              >
                <glamorous(p)
                  appearance="p"
                  className="css-2"
                  element="p"
                  inherit={true}
                  noMargins={true}
                >
                  <p
                    className="css-3"
                  >
                    This non-nested Text has opted in to inheriting those custom styles.
                  </p>
                </glamorous(p)>
              </TextProvider>
            </Text>
          </glamorous(glamorous(Text))>
        </div>
      </glamorous(div)>
      <glamorous(glamorous(Text))
        element="div"
      >
        <Text
          appearance="p"
          className="css-2"
          element="div"
          noMargins={true}
        >
          <TextProvider
            appearance="p"
            className="css-2"
            element="div"
            noMargins={true}
          >
            <glamorous(div)
              appearance="p"
              className="css-2"
              element="div"
              noMargins={true}
            >
              <div
                className="css-4"
              >
                For nested Text components (inside another Text), you can opt 
                <em>
                  out
                </em>
                 of style inheritance by passing false to the inherit prop. 
                <glamorous(div)>
                  <div
                    className="css-1"
                  >
                    This is a nested div with custom styles. 
                    <glamorous(glamorous(Text))
                      inherit={false}
                    >
                      <Text
                        appearance="p"
                        className="css-2"
                        element="p"
                        inherit={false}
                        noMargins={true}
                      >
                        <TextProvider
                          appearance="p"
                          className="css-2"
                          element="p"
                          inherit={false}
                          noMargins={true}
                          parentElement="div"
                        >
                          <glamorous(p)
                            appearance="p"
                            className="css-2"
                            element="p"
                            inherit={false}
                            noMargins={true}
                          >
                            <p
                              className="css-4"
                            >
                              This nested Text has opted out of inheriting those custom styles.
                            </p>
                          </glamorous(p)>
                        </TextProvider>
                      </Text>
                    </glamorous(glamorous(Text))>
                  </div>
                </glamorous(div)>
              </div>
            </glamorous(div)>
          </TextProvider>
        </Text>
      </glamorous(glamorous(Text))>
    </div>
  </glamorous(div)>
</Component>
`;

exports[`Text demo examples Snapshots: nested-elements 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  margin-bottom: 0;
  margin-top: 0;
}

.css-2,
[data-css-2] {
  margin-bottom: 0;
  margin-top: 0;
  font-family: "SF Mono", "Droid Sans Mono", "Source Code Pro", Monaco, Consolas, "Courier New", Courier, monospace;
}

.css-3,
[data-css-3] {
  color: #3272d9;
  text-decoration: none;
}

.css-3:hover,
[data-css-3]:hover,
.css-3[data-simulate-hover],
[data-css-3][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-3:focus,
[data-css-3]:focus,
.css-3[data-simulate-focus],
[data-css-3][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-3:active,
[data-css-3]:active,
.css-3[data-simulate-active],
[data-css-3][data-simulate-active] {
  color: #1d5bbf;
}

<div>
  <Text
    appearance="prose"
    element="p"
  >
    <TextProvider
      appearance="prose"
      element="p"
    >
      <glamorous(p)
        appearance="prose"
        element="p"
      >
        <p
          className="css-0"
        >
          This 
          <Text
            appearance="p"
            element="strong"
          >
            <TextProvider
              appearance="p"
              element="strong"
              inherit={true}
              parentElement="p"
            >
              <glamorous(strong)
                appearance="p"
                element="strong"
                inherit={true}
              >
                <strong
                  className="css-1"
                >
                  strong text
                </strong>
              </glamorous(strong)>
            </TextProvider>
          </Text>
           is in a 
          <Text
            appearance="p"
            element="code"
          >
            <TextProvider
              appearance="p"
              element="code"
              inherit={true}
              parentElement="p"
            >
              <glamorous(code)
                appearance="p"
                element="code"
                inherit={true}
              >
                <code
                  className="css-2"
                >
                  paragraph
                </code>
              </glamorous(code)>
            </TextProvider>
          </Text>
          . 
          <Text
            appearance="p"
            element="p"
          >
            <TextProvider
              appearance="p"
              element="p"
              inherit={true}
              parentElement="p"
            >
              <glamorous(span)
                appearance="p"
                element="p"
                inherit={true}
              >
                <span
                  className="css-1"
                >
                  This 
                  <Text
                    appearance="p"
                    element="p"
                  >
                    <TextProvider
                      appearance="p"
                      element="p"
                      inherit={true}
                      parentElement="p"
                    >
                      <glamorous(span)
                        appearance="p"
                        element="p"
                        inherit={true}
                      >
                        <span
                          className="css-1"
                        >
                          span text
                        </span>
                      </glamorous(span)>
                    </TextProvider>
                  </Text>
                   is in a span
                </span>
              </glamorous(span)>
            </TextProvider>
          </Text>
          This text is in a paragraph. 
          <Link
            href="http://example.com"
          >
            <Link
              href="http://example.com"
              variant="regular"
            >
              <a
                className="css-3"
                href="http://example.com"
              >
                <Text
                  appearance="p"
                  element="p"
                >
                  <TextProvider
                    appearance="p"
                    element="p"
                    inherit={true}
                    parentElement="p"
                  >
                    <glamorous(span)
                      appearance="p"
                      element="p"
                      inherit={true}
                    >
                      <span
                        className="css-1"
                      >
                        This link has a span inside
                      </span>
                    </glamorous(span)>
                  </TextProvider>
                </Text>
              </a>
            </Link>
          </Link>
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <hr />
  <Text
    appearance="prose"
    element="div"
  >
    <TextProvider
      appearance="prose"
      element="div"
    >
      <glamorous(div)
        appearance="prose"
        element="div"
      >
        <div
          className="css-0"
        >
          This text is in a div 
          <Text
            appearance="p"
            element="p"
          >
            <TextProvider
              appearance="p"
              element="p"
              inherit={true}
              parentElement="div"
            >
              <glamorous(p)
                appearance="p"
                element="p"
                inherit={true}
              >
                <p
                  className="css-1"
                >
                  This 
                  <Text
                    appearance="p"
                    element="p"
                  >
                    <TextProvider
                      appearance="p"
                      element="p"
                      inherit={true}
                      parentElement="p"
                    >
                      <glamorous(span)
                        appearance="p"
                        element="p"
                        inherit={true}
                      >
                        <span
                          className="css-1"
                        >
                          span text
                        </span>
                      </glamorous(span)>
                    </TextProvider>
                  </Text>
                   is in a paragraph
                </p>
              </glamorous(p)>
            </TextProvider>
          </Text>
        </div>
      </glamorous(div)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: rtl 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  margin-bottom: 1em;
  margin-top: 0;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

<div
  dir="rtl"
>
  <ThemeProvider>
    <ThemeProvider>
      <div>
        <Text
          appearance="p"
          element="p"
        >
          <TextProvider
            appearance="p"
            element="p"
          >
            <glamorous(p)
              appearance="p"
              element="p"
            >
              <p
                className="css-0"
              >
                محاذاة البداية
              </p>
            </glamorous(p)>
          </TextProvider>
        </Text>
        <Text
          align="end"
          appearance="p"
          element="p"
        >
          <TextProvider
            align="end"
            appearance="p"
            element="p"
          >
            <glamorous(p)
              align="end"
              appearance="p"
              element="p"
            >
              <p
                className="css-1"
              >
                محاذاة النهاية
              </p>
            </glamorous(p)>
          </TextProvider>
        </Text>
      </div>
    </ThemeProvider>
  </ThemeProvider>
</div>
`;

exports[`Text demo examples Snapshots: truncate 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 50%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="p"
    truncate={true}
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate={true}
    >
      <glamorous(p)
        appearance="p"
        element="p"
        truncate={true}
      >
        <p
          className="css-0"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    truncate={200}
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate={200}
    >
      <glamorous(p)
        appearance="p"
        element="p"
        truncate={200}
      >
        <p
          className="css-1"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    truncate="50%"
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate="50%"
    >
      <glamorous(p)
        appearance="p"
        element="p"
        truncate="50%"
      >
        <p
          className="css-2"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </glamorous(p)>
    </TextProvider>
  </Text>
</div>
`;
